OSJ-301 - Algorithm MetadataFilter should sanity check algorithm URIs
https://issues.shibboleth.net/jira/browse/OSJ-301